<resources>
    <string name="app_name">BTC Droid</string>
    <string name="app_title">BTC Droid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="mock_price_high">1234567.89</string>
    <string name="mock_price">12345.67</string>

    <string name="string_space">"%1$s "</string>
    <string name="main_vol">24h Vol</string>
    <string name="main_ask">ASK</string>
    <string name="main_bid">BID</string>
    <string name="main_avg">AVG</string>
    <string name="main_hi">HIGH</string>
    <string name="main_lo">LOW</string>
    <string name="currency_eur">EUR</string>
    <string name="default_currency">@string/currency_eur</string>
    <string name="empty_numeric_value">--.--</string>
    <string name="chart_not_available">Chart data temporarily unavailable</string>
    <string name="data_not_available">Data not available</string>
    <string name="error_retrieving_data">Error retrieving data.</string>
    <string name="retry">Retry</string>
    <string name="title_activity_feed_rss">News</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="menu_news">News</string>
    <string name="menu_source">Source Code</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_header_currencies">Currencies</string>
    <string name="preference_cat_currencies">Select the currencies</string>


</resources>
