<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight=".40"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <me.grantland.widget.AutofitTextView
                android:id="@+id/current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                style="@style/BTCMainPriceFont"
                android:text="@string/mock_price_high"
                android:gravity="bottom|end" />

        </LinearLayout>

        <!-- first row -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:baselineAligned="false">

            <!-- AVG -->
            <LinearLayout
                android:layout_weight="0.33"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:visibility="invisible"
                    style="@style/BidPriceLabelBox"
                    android:text="@string/main_avg" />

                <me.grantland.widget.AutofitTextView
                    android:id="@+id/avg"
                    style="@style/BidPriceValueBox"
                    android:text="@string/mock_price"
                    />
            </LinearLayout>

            <!-- HI -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33">
                <TextView
                    style="@style/BidPriceLabelBox"
                    android:text="@string/main_hi" />
                <me.grantland.widget.AutofitTextView
                    android:id="@+id/high"
                    style="@style/BidPriceValueBox"
                    android:text="@string/mock_price_high" />
            </LinearLayout>

            <!-- ASK -->
            <LinearLayout
                android:orientation="vertical"
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33">
                <TextView
                    style="@style/BidPriceLabelBox"
                    android:text="@string/main_ask" />

                <me.grantland.widget.AutofitTextView
                    android:id="@+id/ask"
                    style="@style/BidPriceValueBox"
                    android:text="@string/mock_price"
                    />
            </LinearLayout>

        </LinearLayout>

        <!-- second row -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <!-- VOL -->
            <LinearLayout
                android:layout_weight="0.33"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom">

                <TextView
                    style="@style/BidPriceLabelBox"
                    android:text="@string/main_vol"
                    />

                <me.grantland.widget.AutofitTextView
                    android:id="@+id/volume"
                    style="@style/BidPriceValueBox"
                    android:text="@string/mock_price"
                    />
            </LinearLayout>


            <!-- LO -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33">
                <TextView
                    style="@style/BidPriceLabelBox"
                    android:text="@string/main_lo" />
                <me.grantland.widget.AutofitTextView
                    android:id="@+id/low"
                    style="@style/BidPriceValueBox"
                    android:text="@string/mock_price" />
            </LinearLayout>

            <!-- BID -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33">
                <TextView
                    style="@style/BidPriceLabelBox"
                    android:text="@string/main_bid"
                    />

                <me.grantland.widget.AutofitTextView
                    android:id="@+id/bid"
                    style="@style/BidPriceValueBox"
                    android:text="@string/mock_price" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>